--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -86,7 +86,7 @@ if (lang !== defaultLocale) {
 const breadcrumbItems = [
   {
     title: productLocale.breadcrumbs.products,
-    href: buildLink("/#products"),
+    href: buildLink("/products"),
   },
 ];
 
