--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -31,7 +31,7 @@ import Layout from "../layouts/Layout.astro";
         
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <a
-            href="/#products"
+            href="/products"
             class="text-yellow-600 hover:text-yellow-700 font-medium transition-colors"
           >
             Посмотреть продукцию
